chore: update oneapi contract to 1.0.1
