# openapi/clientgen/go/model_error_response.go
@@ -1,0 +1,217 @@
+/*
+Crypto Wallet REST API
+
+REST API for air-gapped crypto wallets. Supports multiple cryptocurrencies with fiat currency conversion, future-proof. 
+
+API version: 1.0.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package cryptowalletrest
+
+import (
+	"encoding/json"
+	"time"
+	"bytes"
+	"fmt"
+)
+
+// checks if the ErrorResponse type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &ErrorResponse{}
+
+// ErrorResponse struct for ErrorResponse
+type ErrorResponse struct {
+	// Error type
+	Error string `json:"error"`
+	// Human-readable error message
+	Message string `json:"message"`
+	Timestamp time.Time `json:"timestamp"`
+}
+
+type _ErrorResponse ErrorResponse
+
+// NewErrorResponse instantiates a new ErrorResponse object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewErrorResponse(error_ string, message string, timestamp time.Time) *ErrorResponse {
+	this := ErrorResponse{}
+	this.Error = error_
+	this.Message = message
+	this.Timestamp = timestamp
+	return &this
+}
+
+// NewErrorResponseWithDefaults instantiates a new ErrorResponse object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewErrorResponseWithDefaults() *ErrorResponse {
+	this := ErrorResponse{}
+	return &this
+}
+
+// GetError returns the Error field value
+func (o *ErrorResponse) GetError() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Error
+}
+
+// GetErrorOk returns a tuple with the Error field value
+// and a boolean to check if the value has been set.
+func (o *ErrorResponse) GetErrorOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Error, true
+}
+
+// SetError sets field value
+func (o *ErrorResponse) SetError(v string) {
+	o.Error = v
+}
+
+// GetMessage returns the Message field value
+func (o *ErrorResponse) GetMessage() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Message
+}
+
+// GetMessageOk returns a tuple with the Message field value
+// and a boolean to check if the value has been set.
+func (o *ErrorResponse) GetMessageOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Message, true
+}
+
+// SetMessage sets field value
+func (o *ErrorResponse) SetMessage(v string) {
+	o.Message = v
+}
+
+// GetTimestamp returns the Timestamp field value
+func (o *ErrorResponse) GetTimestamp() time.Time {
+	if o == nil {
+		var ret time.Time
+		return ret
+	}
+
+	return o.Timestamp
+}
+
+// GetTimestampOk returns a tuple with the Timestamp field value
+// and a boolean to check if the value has been set.
+func (o *ErrorResponse) GetTimestampOk() (*time.Time, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Timestamp, true
+}
+
+// SetTimestamp sets field value
+func (o *ErrorResponse) SetTimestamp(v time.Time) {
+	o.Timestamp = v
+}
+
+func (o ErrorResponse) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o ErrorResponse) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["error"] = o.Error
+	toSerialize["message"] = o.Message
+	toSerialize["timestamp"] = o.Timestamp
+	return toSerialize, nil
+}
+
+func (o *ErrorResponse) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"error",
+		"message",
+		"timestamp",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(data, &allProperties)
+
+	if err != nil {
+		return err;
+	}
+
+	for _, requiredProperty := range(requiredProperties) {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varErrorResponse := _ErrorResponse{}
+
+	decoder := json.NewDecoder(bytes.NewReader(data))
+	decoder.DisallowUnknownFields()
+	err = decoder.Decode(&varErrorResponse)
+
+	if err != nil {
+		return err
+	}
+
+	*o = ErrorResponse(varErrorResponse)
+
+	return err
+}
+
+type NullableErrorResponse struct {
+	value *ErrorResponse
+	isSet bool
+}
+
+func (v NullableErrorResponse) Get() *ErrorResponse {
+	return v.value
+}
+
+func (v *NullableErrorResponse) Set(val *ErrorResponse) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableErrorResponse) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableErrorResponse) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableErrorResponse(val *ErrorResponse) *NullableErrorResponse {
+	return &NullableErrorResponse{value: val, isSet: true}
+}
+
+func (v NullableErrorResponse) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableErrorResponse) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
