# openapi/servergen/go/model__transactions_get_200_response_inner.go
@@ -1,39 +1,0 @@
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-/*
- * Crypto Wallet REST API
- *
- * REST API for air-gapped crypto wallets. Supports multiple cryptocurrencies, future-proof. 
- *
- * API version: 1.0.0
- */
-
-package cryptowalletrest
-
-
-import (
-	"time"
-)
-
-
-
-type TransactionsGet200ResponseInner struct {
-
-	Txid string `json:"txid,omitempty"`
-
-	Timestamp time.Time `json:"timestamp,omitempty"`
-
-	Amount string `json:"amount,omitempty"`
-
-	Direction string `json:"direction,omitempty"`
-}
-
-// AssertTransactionsGet200ResponseInnerRequired checks if the required fields are not zero-ed
-func AssertTransactionsGet200ResponseInnerRequired(obj TransactionsGet200ResponseInner) error {
-	return nil
-}
-
-// AssertTransactionsGet200ResponseInnerConstraints checks if the values respects the defined constraints
-func AssertTransactionsGet200ResponseInnerConstraints(obj TransactionsGet200ResponseInner) error {
-	return nil
-}
